# deck.gl-native

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPPLINT.cfg  README.md  build.sh
cpp/examples/deck.gl/: CMakeLists.txt  flight-paths.cc  manhattan-population.cc  stdinout.cpp  texture-render.cc  vancouver-blocks.cc
cpp/examples/deck.gl/data/: airports.h  flights.ndjson  heathrow-flights.h  heathrow-flights.ndjson
cpp/examples/luma.gl/: CMakeList.txt  CMakeLists.txt  SampleUtils.cpp  animometer.cc  animometer.cpp  webgpu_cpp.cpp
cpp/modules/deck.gl/: CMakeLists.txt  core.h  json.h  layers.h
cpp/modules/deck.gl/core/src/: core.cc  core.cpp  core.h
cpp/modules/deck.gl/core/src/arrow/: README.md  arrow-mapper.cc  arrow-mapper.h  arrow-utils.cc  arrow-utils.h  row.cc  row.h
cpp/modules/deck.gl/core/src/attributes/: pseudo-code.h
cpp/modules/deck.gl/core/src/lib/: component.cc  component.h  constants.cpp  constants.h  deck.cc  deck.cpp  deck.h  earcut.hpp  layer-context.h  layer-manager.cc  layer-manager.cpp  layer-manager.h  layer-state.h  layer.cc  layer.cpp  layer.h  view-manager.cc  view-manager.cpp  view-manager.h
cpp/modules/deck.gl/core/src/viewports/: viewport.cc  viewport.cpp  viewport.h  web-mercator-viewport.cc  web-mercator-viewport.cpp  web-mercator-viewport.h
cpp/modules/deck.gl/core/src/views/: map-view.cc  map-view.cpp  map-view.h  view-state.cc  view-state.cpp  view-state.h  view.cc  view.cpp  view.h
cpp/modules/deck.gl/core/test/arrow/: row-test.cc
cpp/modules/deck.gl/core/test/lib/: earcut-test.cpp  layer-manager-test.cc  layer-test.cc  layer-test.cpp  view-manager-test.cc  view-manager-test.cpp
cpp/modules/deck.gl/core/test/viewports/: viewport-test.cc  web-mercator-viewport-test.cpp
cpp/modules/deck.gl/core/test/views/: json-data.h  map-view-json-data.h  map-view-test.cc  map-view-test.cpp  view-json-data.h  view-state-test.cc  view-state-test.cpp  view-test.cpp
cpp/modules/deck.gl/core/wip/: diff-props.cpp
cpp/modules/deck.gl/core/wip/shaderlib/: index.js
cpp/modules/deck.gl/json/src/: json.h
cpp/modules/deck.gl/json/src/component/: component.cpp  component.h
cpp/modules/deck.gl/json/src/converter/: json-converter.cc  json-converter.cpp  json-converter.h  json-types-mathgl.h  json-types.cpp  json-types.h
cpp/modules/deck.gl/json/src/json-object/: json-object.cpp  json-object.h
cpp/modules/deck.gl/json/test/: json-converter-test.cpp  json-data.h  json-object-test.cc  json-types-test.cpp
cpp/modules/deck.gl/layers/src/: layers.cpp  layers.h
cpp/modules/deck.gl/layers/src/line-layer/: line-layer-fragment.glsl.h  line-layer-vertex.glsl.h  line-layer.cpp  line-layer.h  project-vertex.glsl.h
cpp/modules/deck.gl/layers/src/scatterplot-layer/: scatterplot-layer-fragment.glsl.h  scatterplot-layer-vertex.glsl.h  scatterplot-layer.cc  scatterplot-layer.cpp  scatterplot-layer.h
cpp/modules/deck.gl/layers/src/solid-polygon-layer/: solid-polygon-layer-fragment.glsl.h  solid-polygon-layer-vertex-main.glsl.h  solid-polygon-layer-vertex-side.glsl.h  solid-polygon-layer-vertex-top.glsl.h  solid-polygon-layer.cc  solid-polygon-layer.cpp  solid-polygon-layer.h
cpp/modules/deck.gl/layers/test/: line-layer-test.cpp  scatterplot-layer-test.cpp  solid-polygon-layer-test.cc  solid-polygon-layer-test.cpp
cpp/modules/loaders.gl/: CMakeLists.txt  csv.h  json.h
cpp/modules/loaders.gl/csv/src/: csv-loader.cc  csv-loader.cpp  csv-loader.h
cpp/modules/loaders.gl/csv/test/: csv-data.h  csv-loader-test.cpp
cpp/modules/loaders.gl/json/src/: json-loader.cc  json-loader.cpp  json-loader.h
cpp/modules/loaders.gl/json/test/: json-loader-data.h  json-loader-test.cc  json-loader-test.cpp
cpp/modules/luma.gl/: CMakeLists.txt  core.h  garrow.h  webgpu.h
cpp/modules/luma.gl/core/examples/: animometer.cpp
cpp/modules/luma.gl/core/src/: animation-loop-factory.h  animation-loop.cc  animation-loop.cpp  animation-loop.h  blit-model.cc  blit-model.h  glfw-animation-loop.cc  glfw-animation-loop.cpp  glfw-animation-loop.h  globals.h  metal-animation-loop.h  metal-animation-loop.mm  model.cc  model.cpp  model.h  size.cc  size.h  webgpu-column.h  webgpu-table.h
cpp/modules/luma.gl/core/src/animation-loop/: animation-loop-factory.cc  animation-loop.cc  animation-loop.h  glfw-animation-loop.cc  glfw-animation-loop.h  metal-animation-loop.mm
cpp/modules/luma.gl/core/test/: animation-loop-test.cc
cpp/modules/luma.gl/garrow/docs/: arrow-mapping.md  gpu-table-guide.md
cpp/modules/luma.gl/garrow/src/: array.cc  array.h  field.cc  field.h  key-value-metadata.cc  key-value-metadata.h  schema.cc  schema.h  table.cc  table.h
cpp/modules/luma.gl/garrow/src/util/: arrow-utils.cc  arrow-utils.h  attribute-descriptor.cc  attribute-descriptor.h  webgpu-utils.cc  webgpu-utils.h
cpp/modules/luma.gl/garrow/test/util/: arrow-utils-test.cc
cpp/modules/luma.gl/webgpu/src/: combo-render-pipeline-descriptor.cc  combo-render-pipeline-descriptor.cpp  combo-render-pipeline-descriptor.h  shaderc-utils.cc  shaderc-utils.cpp  shaderc-utils.h  swap-chain-utils.h  terrible-command-buffer.cpp  terrible-command-buffer.h  webgpu-constants.h  webgpu-helpers.cc  webgpu-helpers.cpp  webgpu-helpers.h  webgpu-utils.cc  webgpu-utils.cpp  webgpu-utils.h
cpp/modules/luma.gl/webgpu/src/backends/: backend-binding.cpp  backend-binding.h  d3d12-binding.cpp  metal-binding.h  metal-binding.mm  (+3 more)
cpp/modules/luma.gl/webgpu/test/: webgpu-test.cpp
cpp/modules/math.gl/: CMakeLists.txt  core.h  web-mercator.h
cpp/modules/math.gl/core/src/: core.h  rectangle.h
cpp/modules/math.gl/core/test/: core-test.cpp
cpp/modules/math.gl/web-mercator/src/: web-mercator-utils.cpp  web-mercator-utils.h
cpp/modules/math.gl/web-mercator/test/: sample-viewports.h  web-mercator-utils-test.cpp
cpp/modules/probe.gl/: CMakeLists.txt  core.h
cpp/modules/probe.gl/core/src/: assert.cpp  assert.h  compiler.h  error.cc  error.h  log.cpp  log.h  platform.h  system-utils.cpp  system-utils.h  timer.cc  timer.cpp  timer.h
cpp/modules/probe.gl/core/test/: timer-test.cpp
(+259 files in other folders)
